# instaspyder

./: .gitignore  README.md  pyproject.toml
assets/: config.py
cli/: cli_interface.py
core/: headers_loader.py  instagram_api.py  search_logic.py  user_id_fetcher.py
instaspyder/: __init__.py  __main__.py
instaspyder/assets/: config.py
instaspyder/cli/: cli_interface.py
instaspyder/core/: auth.py  config_manager.py  create_headers.py  face_engine.py  headers_loader.py  instagram_api.py  login.py  search_logic.py  state_manager.py  user_id_fetcher.py
instaspyder/utils/: colors.py
utils/: sanitize_text.py
